--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>LARGEBUCK$ Coffee</title>
+    <title>Boba Teas</title>
     <meta name="robots" content="noindex,nofollow" />
 	<!-- below is a google font, go to https://www.google.com/fonts to get yours! -->
 	<link href='https://fonts.googleapis.com/css?family=Holtwood+One+SC' rel='stylesheet' type='text/css'>
@@ -80,12 +80,13 @@
      </main>
 	 <footer>
 		<p><small>&copy; 2022 by 
-			YOUR NAME HERE, All Rights Reserved ~ 
+			Kady Tran, All Rights Reserved ~ 
 			<a id="html-checker" href="#">Check HTML</a> ~ 
 			<a id="css-checker" href="#">Check CSS</a></small>
 	   </p>
 	  </footer>
     <!-- END Footer -->
+	<script src="js/daily-grind.js"></script>
 	<script>
 		//https://tinyurl.com/dynamic-html-checker
 		document.getElementById("html-checker").setAttribute("href","https://validator.w3.org/nu/?doc=" + location.href);
